--- a/kontakt-backend/package.json
+++ b/kontakt-backend/package.json
@@ -1,13 +1,16 @@
 {
     "name": "kontakt-backend",
     "version": "1.0.0",
+    "description": "Modernes Kontaktformular-Backend",
     "main": "server.js",
+    "type": "module",
     "scripts": {
       "start": "node server.js"
     },
     "dependencies": {
+      "cors": "^2.8.5",
+      "dotenv": "^16.3.1",
       "express": "^4.18.2",
-      "nodemailer": "^6.9.4",
-      "cors": "^2.8.5"
+      "nodemailer": "^6.9.8"
     }
   }
